center robot and fix eyes and leg alignment. Add hover effects so robot dances and waves

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ h1 {
 }
 
 .robots {
+	flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
 }
 
 .head, 
@@ -24,7 +27,7 @@ h1 {
 } 
 
 .eyes {
-	
+	display: flex;
 }
 
 .head:hover {
@@ -48,9 +51,25 @@ h1 {
 	margin-right: 10px; 
 } 
 
+.left_arm:hover {
+	-webkit-transform: rotate(20deg);
+    -moz-transform: rotate(20deg);
+    -o-transform: rotate(20deg);
+    -ms-transform: rotate(20deg);
+    transform: rotate(-40deg);
+}
+
 .right_arm { 
 	margin-left: 10px; 
 } 
+
+.right_arm:hover {
+	-webkit-transform: rotate(20deg);
+    -moz-transform: rotate(20deg);
+    -o-transform: rotate(20deg);
+    -ms-transform: rotate(20deg);
+    transform: rotate(40deg);
+}
 
 .torso { 
 	width: 200px; 
@@ -64,6 +83,7 @@ h1 {
 	height: 200px;
 	/* This is another useful property. Hmm what do you think it does?*/
 	margin: 0 auto;
+	display: flex;
 
 } 
 
@@ -74,7 +94,7 @@ h1 {
 } 
 
 .left_leg { 
-	margin-left: 45px; 
+	margin-left: 45px;
 } 
 
 .left_leg:hover {
@@ -87,6 +107,14 @@ h1 {
 
 .right_leg { 
 	margin-left: 30px; 
+}
+
+.right_leg:hover {
+	-webkit-transform: rotate(20deg);
+    -moz-transform: rotate(20deg);
+    -o-transform: rotate(20deg);
+    -ms-transform: rotate(20deg);
+    transform: rotate(-20deg);
 }
 
 .left_eye, .right_eye { 
@@ -106,8 +134,8 @@ h1 {
 
 .right_eye { 
 	position: relative; 
-	top: 81px; 
-	left: 140px; 
+	top: 100px; 
+	left: 120px; 
 }
 
 
